refactor: внести правки в код